--- a/services/index.css
+++ b/services/index.css
@@ -85,9 +85,22 @@ h1 {
   line-height: 1.3;
 }
 
+h2.services-title {
+  font-size: 2.125em;
+  line-height: 1.3;
+}
+
 p {
   font-size: 1.5em;
   font-weight: 400;
+  letter-spacing: 0.08em;
+  line-height: 1.3em;
+  text-align: left;
+  margin: 40px 0;
+}
+
+p.intro-description {
+  margin: 20px 0;
 }
 
 a {
@@ -133,4 +146,9 @@ div.nav-item {
   flex-direction: column;
   gap: 10px;
   margin: 30px 0;
+}
+
+section.hero-content {
+  margin: 0px auto 7.5rem;
+  max-width: 64em;
 }
