--- a/services/index.css
+++ b/services/index.css
@@ -86,8 +86,13 @@ h1 {
 }
 
 h2.services-title {
-  font-size: 2.125em;
+  font-size: 2.2em;
   line-height: 1.3;
+  text-align: center;
+  font-weight: 400;
+  letter-spacing: 0.0625rem;
+  margin-top: 2.75em;
+  margin-bottom: 1.25em;
 }
 
 p {
@@ -105,25 +110,30 @@ p.intro-description {
 }
 
 a {
-  color: rgb(199, 52, 187);
+  color: #3dd2cc;
   text-decoration: none;
   font-size: 1em;
   font-weight: 400;
   max-width: fit-content;
 }
 
-a.nav-item {
-  color: black;
-  transition: 0.1s ease-out;
-}
-a.nav-item:hover {
-  color: blueviolet;
-}
-
 h1,
 h2,
 h3 {
   font-weight: 500;
+}
+
+i {
+  color: #3dd2cc;
+}
+
+footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 2.25em;
+  gap: 20px;
 }
 
 /* navigation bar */
@@ -133,7 +143,7 @@ nav {
   justify-content: space-between;
   align-items: center;
   padding: 1.5em 2.5em;
-  width: 100vw;
+  width: 100%;
   position: fixed;
   background: rgba(255, 255, 255, 0.205);
   backdrop-filter: blur(2px);
@@ -146,6 +156,14 @@ nav {
   color: black;
   display: flex;
   gap: 40px;
+}
+
+a.nav-item {
+  color: black;
+  transition: all 0.15s ease;
+}
+a.nav-item:hover {
+  color: blueviolet;
 }
 
 .active {
@@ -162,7 +180,7 @@ nav {
   background: linear-gradient(
     110deg,
     rgba(255, 255, 255, 1) 48%,
-    rgba(61, 210, 204, 1) 48%
+    rgba(115, 142, 239, 1) 48%
   );
 }
 .intro-content {
@@ -177,7 +195,54 @@ nav {
   margin: 30px 0;
 }
 
-section.hero-content {
-  margin: 0px auto 7.5rem;
-  max-width: 64em;
+.hero-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.hero-content.integration {
+  background-color: rgb(234, 234, 234);
+}
+
+.hero-content.collaborate {
+  color: white;
+  background-color: #154fff;
+  padding: 10em;
+  gap: 2em;
+}
+
+h2.services-title.collaborate {
+  margin: 0;
+  font-size: 3.6em;
+  line-height: 1.3em;
+}
+
+a.collaborate-button {
+  color: white;
+  outline-style: solid;
+  padding: 10px 20px;
+  transition: all 0.15s ease;
+}
+
+a.collaborate-button:hover {
+  outline-color: rgba(255, 255, 255, 0.446);
+  background-color: rgba(255, 255, 255, 0.446);
+}
+
+.description-container {
+  max-width: 65em;
+}
+
+.footer-icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+
+i.footer-icon {
+  font-size: 32px;
+  color: #154fff;
 }
