--- a/team/index.css
+++ b/team/index.css
@@ -203,6 +203,8 @@ a.nav-item:hover {
   position: relative;
   top: 15vh;
   right: 0px;
+  width: 50em;
+  /* width: 100%; */
   /* object-fit: cover; */
   /* object-position: center center; */
 }
